@@ -108,4 +108,25 @@ subtest deltas => sub {
     );
 };
 
+{
+  package Foo;
+
+  use Test2::Tools::Basic;
+  main::imported_ok(qw/fail/);
+  
+  use overload bool => sub { fail( 'illegal use of overloaded bool') } ;
+  use overload '""' => sub { $_[0] };
+  sub new {
+      my $class = shift;
+      bless [ @_ ] , $class;
+  }
+}
+
+subtest object_as_arrays => sub {
+
+    my $o1 = Foo->new( 'b') ;
+
+    is ( $o1 , subset{  item 'b' }, "same" );
+};
+
 done_testing;
