@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Ensure that objects are not used in Boolean contexts, second
+      attempt. (djerius)
+
 0.000074  2017-08-31 20:37:47-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add Test2::Event::Times
